<resources>
    <string name="app_name">PetSavers</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_animal_favorites">Favorites</string>

    <!-- Strings for animal labels -->
    <string name="dogs_label">Dogs</string>
    <string name="cats_label">Cats</string>
    <string name="hamsters_label">Hamsters</string>
    <string name="hedgehogs_label">Hedgehogs</string>
    <string name="rabbits_label">Rabbits</string>
    <string name="fish_label">Fish</string>
    <string name="reptiles_label">Reptiles</string>
    <string name="birds_label">Birds</string>
    <string name="farmanimals_label">Farm Animals</string>

    <!-- Strings related to login -->
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="not_a_member">Not a member?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="reset_password_button">Reset it</string>
    <string name="forgot_password_label">Forgot your password?</string>

    <!-- Strings related to sign up -->
    <string name="account_creation_title">Create a PetSavers Account</string>
    <string name="name_label">Name</string>
    <string name="user_name">e.g., Alex Tilot</string>
    <string name="email_label">Email</string>
    <string name="user_email">e.g., alextilot@gmail.com</string>
    <string name="password_label">Password</string>
    <string name="user_password_first">e.g., *********</string>
    <string name="verify_password">Verify Password</string>
    <string name="user_password_second">e.g., *********</string>
    <string name="user_new_account_button">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
