<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="visualbasics.petsavers.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:text="@string/account_creation_title"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
            <!--android:textSize="@dimen/activity_horizontal_margin"-->

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/textPerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/textPerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textColor="@android:color/black" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/textPassFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/user_password_first"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textVerifyPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_password"
            android:textColor="@android:color/black" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/textPassCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/user_password_second"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorPrimary"
            android:text="@string/user_new_account_button"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

</FrameLayout>
