<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/dogs_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dog_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showDogs"
                app:srcCompat="@drawable/ic_dog" />

            <TextView
                android:id="@+id/dog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dogs_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cats_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cat_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showCats"
                app:srcCompat="@drawable/ic_cat" />

            <TextView
                android:id="@+id/cat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/cats_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hamsters_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hamster_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showHamsters"
                app:srcCompat="@drawable/ic_hamster" />

            <TextView
                android:id="@+id/hamster_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableTop="@color/colorPrimary"
                android:text="@string/hamsters_label" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/hedgehog_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/hedgehog_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showHedgehogs"
                app:srcCompat="@drawable/ic_hedgehog" />

            <TextView
                android:id="@+id/hedgehog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hedgehogs_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rabbits_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rabbit_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showRabbits"
                app:srcCompat="@drawable/ic_rabbit" />

            <TextView
                android:id="@+id/rabbit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rabbits_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fish_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fish_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showFish"
                app:srcCompat="@drawable/ic_fish" />

            <TextView
                android:id="@+id/fish_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fish_label" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/reptiles_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reptile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showReptiles"
                app:srcCompat="@drawable/ic_chameleon" />

            <TextView
                android:id="@+id/reptile_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/reptiles_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/birds_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bird_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showBirds"
                app:srcCompat="@drawable/ic_bird" />

            <TextView
                android:id="@+id/bird_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/birds_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/farmanimals_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/farmanimal_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:onClick="showFarmAnimals"
                app:srcCompat="@drawable/ic_cow" />

            <TextView
                android:id="@+id/farmanimal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/farmanimals_label" />
        </LinearLayout>
    </TableRow>

</TableLayout>

